--- a/B64_GUI#.csproj
+++ b/B64_GUI#.csproj
@@ -7,6 +7,9 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+	  <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+	  <DebugType>None</DebugType>
+	  <DebugSymbols>false</DebugSymbols>
   </PropertyGroup>
 
 </Project>
